# ShortUrl

./: README.md
.github/workflows/: pipeline.yaml
backend/: .env-example  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 720e574372e9_criação_tabela_users_e_links.py  b66c1140a254_add_refresh_tokens_table.py  c608406849b7_add_expires_at_to_link_table.py  e48020f141f9_criação_tabela_users_e_links.py
backend/src/: app.py  logger.py  schemas.py  security.py  settings.py  utils.py
backend/src/db/: database.py  models.py
backend/src/routes/: auth.py  url.py
backend/tests/: conftest.py  test_auth.py  test_security.py  test_url.py
frontend/: .env-example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Layout.tsx  Navbar.tsx  Popup.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: AuthPage.tsx  ConfirmationPage.tsx  HomePage.tsx  ProfilePage.tsx  StatsPage.tsx
frontend/src/services/: auth.ts
frontend/src/types/: index.ts
