[project]
name = "API-ShortURL"
version = "0.1.0"
authors = [
    {name = "mtzdev",email = "matheus.gol231@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]

[tool.poetry]
packages = [
    { include = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
alembic = "^1.15.2"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
freezegun = "^1.5.2"
locust = "^2.37.11"
